manifests/nginx-rp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-rp-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-rp-pod
  template:
    metadata:
      labels:
        app: nginx-rp-pod
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: nginx-rp-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
      volumes:
      - name: nginx-rp-config
        configMap:
          name: nginx-rp-config
