manifests/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod
  labels:
    app: django-pod
spec:
  containers:
  - name: django-container
    image: eukhlg/django:latest
    ports:
    - containerPort: 3003
    resources:
      limits:
        memory: 512Mi
        cpu: "1"
      requests:
        memory: 256Mi
        cpu: "0.2"
    command: ["sh", "-c"]
    args: ["python manage.py migrate && python manage.py runserver 0.0.0.0:3003"]
