manifests/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3003
    targetPort: 3003
  selector:
    app: django-pod
