manifests/nginx-rp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-rp-service
  labels:
    app: nginx-rp-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx-rp-pod
